fix overflow and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ html {
     background-color: #464646;
     height: 100vh;
     width: 100vw;
-    max-width: 100%;   
+    max-width: 100%; 
+      
 } 
 
 /***********************
@@ -66,10 +67,8 @@ h1 {
     font-weight: bolder;
 }
 
-hr {
-    border-width: 5px;
-    border-color: gray;
-
+.section-break {
+    border-bottom: 5px solid gray;
 }
 
 /************************
@@ -91,7 +90,7 @@ hr {
     background-size: cover;
     background-position: center;
     background-color: gray;
-    height: 110vh;
+    min-height: 100vh;
     width: 100vw;
     max-width: 100%;
 }
@@ -104,12 +103,14 @@ hr {
 }
 
 .about-detail h5{ 
-    line-height: 150% !important;  
+    line-height: 150% !important;
+    margin-top: 3rem;  
 }
 
 #about-text {
     margin-top: 3rem;
 }
+
 
 /************************
 *    Portfolio Section   *
@@ -118,10 +119,6 @@ hr {
     color: #4395ab !important;
 }
  
-.project-card {    
-    min-height:500px;
-}
-
 
 .collapsible-link{
     text-decoration: none !important;
@@ -166,6 +163,10 @@ hr {
     font-weight: bold;
 }
 
+.portfolio-section {
+
+}
+
 /************************
 *   Contact Me Section   *
 *************************/
@@ -184,8 +185,8 @@ hr {
     color: white;
 }
 .connect{
-    -webkit-text-fill-color: #4395ab;
-  -webkit-text-stroke-color: white;
+    -webkit-text-fill-color: white;
+  -webkit-text-stroke-color: #4395ab;
   -webkit-text-stroke-width: 0.5px; 
 }
 
@@ -209,16 +210,16 @@ hr {
 ******************************/
 @media only screen and (max-width: 1020px) {
     h1 {
-        font-size: 1.5rem;        
+        font-size: 1.8rem;        
     }
 
     h3 {
-        font-size: 1.25rem;
+        font-size: 1.5rem;
     }
 
     h5 {
         font-size: 1.15rem;
-       
+        margin-top: 1rem !important;       
     }
 
     p {
@@ -230,16 +231,53 @@ hr {
     }
 
     #title {
+        font-size: 1.25rem;
+    }   
+}
+
+@media only screen and (max-width: 767px) {
+    h1 {
+        font-size: 1.5rem;        
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    #title {
+        font-size: 0.875rem;
+    }
+    
+    #about-text {
+        margin-top: 0rem !important;
+    }
+}
+@media only screen and (max-width: 599px) {
+
+    h1 {
+        font-size: 1.25rem;
+        margin-top: 0rem !important;       
+    }
+    
+    h5 {
+        font-size: 0.75rem;
+        margin-top: 0rem !important;       
+    }
+
+    p {
+        font-size: 0.55rem;
+    }
+
+    .fa-3x {
+        font-size: 1.15rem !important; 
+    }
+
+    #title {
         font-size: 0.875rem;
     }
 
     #profile {
-        max-height: 650px;        
+        max-height: 150px; 
+        margin-top: 0;       
     }    
-}
-
-@media only screen and (max-width: 720px) {
-    #about-text {
-        margin-top: 0rem !important;
-    }
 }
